src/main/java/com/example/mybookshopapp/errors/RoleDoesNotExistsException.java
package com.example.mybookshopapp.errors;

public class RoleDoesNotExistsException extends Exception{
    public RoleDoesNotExistsException(String message){
        super(message);
    }
}
